# odoru

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  F5TTS_PARAMS.md  README.md  notes.md  run.sh  setup.sh  tts_overrides.txt
app/: Cargo.toml  build.rs
app/frontend/: export-reader.html  index.html  package-lock.json  package.json  reader-export.html  tsconfig.json  vite.config.ts  vite.reader-export.config.ts
app/frontend/src/: annotations.js  annotations.test.ts  annotations.ts  document.js  document.ts  edit.js  edit.ts  export-reader.js  export-reader.ts  jobs.js  jobs.ts  main.js  main.ts  markdown-live.ts  markdown.js  markdown.test.js  markdown.test.ts  markdown.ts  player.js  player.ts  reader-author.js  reader-author.ts  reader-core.js  reader-core.test.ts  reader-core.ts  reader-export.js  reader-export.ts  reader-util.test.ts  reader-util.ts  style.css  test-setup.ts  theme.ts  ui.js  ui.ts  view-state.test.ts  view-state.ts  ws.js  ws.ts
app/src/: jobs.rs  main.rs
cli/: Cargo.toml
cli/src/: audio.rs  import.rs  main.rs  spa_json.rs
py-venv/: Cargo.toml
py-venv/examples/: async_hello.rs  hello.rs
py-venv/src/: embed_module_doc.tmp  lib.rs
tts/: Cargo.toml  README.md
tts/.cargo/: config.toml
tts/examples/: basic.rs  explore_model.rs  normalize_dump.rs  synthesize.rs
tts/src/: alignment.rs  audio_cache.rs  backend.rs  chunk.rs  engine.rs  error.rs  export.rs  g2p.rs  lib.rs  markdown.rs  mock.rs  splitter.rs  synth.rs  transcript.rs  tts.py  tts.rs
tts/src/f5/: mod.rs  normalizer.rs
tts/src/kokoro/: mod.rs
tts/src/python/: bridge.rs  mod.rs  setup.rs
tts/tests/: integration.rs  splitter.rs
util/: Cargo.toml
util/src/: cache.rs  documents.rs  export.rs  frontmatter.rs  index.rs  lib.rs  normalizer.rs  segment_types.rs  segmenter.rs  slug.rs  splitter.rs  voice.rs
vibe/: .env.example  Cargo.toml  Dockerfile  Dockerfile.cloudrun  Dockerfile.cloudrun-blackwell  README.md  bench_runs.jsonl  download-models.py  entrypoint.sh  plan.md  runpod.md  runs.jsonl  setup.md  split_augment.py  split_authorship.py  split_authorship_all.py  split_authorship_end.py  split_authorship_short.py  verify-qwen-tokenizer.py  vibevoice.md
vibe/data/: augment_multiparty.txt  augment_multiparty_normalized.txt  authorship_seg01.txt  authorship_seg01_normalized.txt  authorship_seg02.txt  authorship_seg03.txt  authorship_seg03_normalized.txt  authorship_seg04.txt  authorship_seg05_normalized.txt  authorship_seg06.txt  authorship_seg07.txt  authorship_seg07_dialog_normalized.txt  authorship_seg07_normalized.txt  authorship_seg08.txt  authorship_seg08_normalized.txt  authorship_seg09.txt  authorship_seg09_normalized.txt  authorship_seg10.txt  authorship_seg10_normalized.txt  authorship_seg11.txt  authorship_seg11_normalized.txt  authorship_seg12.txt  authorship_seg12_normalized.txt  authorship_seg13.txt  authorship_seg13_normalized.txt  authorship_seg14.txt  authorship_seg14_normalized.txt  authorship_seg15.txt  authorship_seg15_normalized.txt  authorship_seg16.txt  authorship_seg16_normalized.txt  authorship_seg17.txt  authorship_seg17_normalized.txt  authorship_seg18.txt  authorship_seg18_normalized.txt  authorship_seg19.txt  authorship_seg19_normalized.txt  authorship_seg20.txt  authorship_seg20_normalized.txt  authorship_seg21.txt  (+6 more)
vibe/data/2026-06-14 10p/: augment_multiparty_normalized.txt  augment_traveling_normalized.txt  normalize_traveling.sh
vibe/data/2026-06-14 7-30pm/: odoru_multiparty_normalized.txt
vibe/data/2026-06-14 am and prior/: odoru_markers_normalized.txt  odoru_test_normalized.txt
vibe/data/2026-06-15 mutliparty/: augment_multiparty_p1.txt  augment_multiparty_p1_normalized.txt  augment_multiparty_p2.txt  augment_multiparty_p2_normalized.txt  augment_multiparty_p3.txt  augment_multiparty_p3_normalized.txt
vibe/data/2026-06-18 9-30a/: authorship_seg10_normalized.txt  seg10.txt
vibe/data/passing tests/: augment_traveling_normalized.txt  normalize_test.txt
vibe/data/prior/: odoru_abstract_intro_normalized.txt
vibe/data/segments - June 14/: seg01_normalized.txt  seg02_normalized.txt  seg03.txt  seg04.txt  seg05_normalized.txt  seg09_normalized.txt  seg10.txt  seg10_normalized.txt  seg11.txt  seg13.txt  seg13_normalized.txt  seg15.txt  seg18_normalized.txt  seg19.txt  seg19_normalized.txt  seg20.txt  seg21_normalized.txt  seg22.txt
vibe/data/segments-thru-Jun18/: authorship_seg02.txt  authorship_seg02_normalized.txt  authorship_seg04_normalized.txt  authorship_seg05.txt  authorship_seg06.txt  authorship_seg06_normalized.txt  authorship_seg07_dialog.txt  authorship_seg07_normalized.txt  authorship_seg08.txt  authorship_seg08_normalized.txt  authorship_seg10.txt  authorship_seg10_normalized.txt  authorship_seg11.txt  authorship_seg12.txt  authorship_seg12_normalized.txt  authorship_seg13.txt  authorship_seg13_normalized.txt  authorship_seg14.txt  authorship_seg14_normalized.txt  authorship_seg15.txt  authorship_seg15_normalized.txt  authorship_seg16.txt  authorship_seg16_normalized.txt  authorship_seg17.txt  authorship_seg17_normalized.txt  authorship_seg18_normalized.txt  authorship_seg19.txt  authorship_seg19_normalized.txt  authorship_seg20.txt  authorship_seg20_normalized.txt  authorship_seg21.txt  authorship_seg21_normalized.txt  authorship_seg22.txt  authorship_seg22_normalized.txt  authorship_seg23.txt  authorship_seg23_normalized.txt  authorship_seg24.txt  (+4 more)
vibe/dev/: artifact-augment.md  artifact-authorship.md  artifact-hypertext87.md  artifact-suppression.md  cloudrun.md  failures.md  gcs-job-state.md  listen-test-batch.md  listen-test.md  odoru-import-prep.md  odoru-import.md  old-listen-test-ssh.md  parallel.md  plan.md  quirks.md  setup.md  stitch.sh  tail-logs.py  vibevoice.md  voices.md
vibe/docker/: batch_bench.py  batch_inference.py  download-models.py  inference_from_file.py
vibe/gcs-eval/: Cargo.toml  Dockerfile
vibe/listen-test/: check-ref-leak.sh  review-guide.py
vibe/service/: Cargo.toml
vibe/src/: config.rs  doc.rs  main.rs  runpod.rs  segment.rs  service.rs  synth.rs  voice.rs
(+174 files in other folders)
