[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
util = { path = "../util" }
tts = { path = "../tts" }
dl = { path = "../dl" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
base64 = "0.22"
dashmap = "6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"