[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dl"
path = "src/main.rs"


[dependencies]
config = { path = "../config" }
hound = "3"
tts = { path = "../tts" }
dl = { path = "../dl" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
indicatif = "0.18"
