[package]
name = "cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "dl"
path = "src/main.rs"


[dependencies]
util = { path = "../util" }
tts = { path = "../tts" }
dl = { path = "../dl" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
indicatif = "0.18"
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3"
