[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
hound = "3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
thiserror = "1"
anyhow = "1"
unicode-segmentation = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "explore_model"
path = "examples/explore_model.rs"

[[example]]
name = "synthesize"
path = "examples/synthesize.rs"