[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[dependencies]
# PyO3: Rust/Python bridge
pyo3 = { version = "0.28", features = ["auto-initialize"] }

# ONNX runtime — Kokoro backend
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# WAV writing
hound = "3"

# JSON parsing (tokenizer.json)
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Error types
thiserror = "1"
anyhow = "1"

# Sentence splitting
unicode-segmentation = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "explore_model"
path = "examples/explore_model.rs"

[[example]]
name = "synthesize"
path = "examples/synthesize.rs"
