[package]
name = "util"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "migrate_v0_2_uuid_keys"
path = "bin/migrate_v0_2_uuid_keys.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
roman = "0.2"
num2words = "1.2.0"
tokio = { version = "1", features = ["sync"] }
splitter = { path = "../splitter" }

reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
