[workspace]
members = [".", "service"]

[package]
name = "vibe"
version = "0.1.0"
edition = "2021"
default-run = "vibe"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hound = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
dotenvy = "0.15"
util = { path = "../util" }
