# Standalone de-risk crate for the GCS-backed job state work — its own
# [workspace] so it is NOT pulled into vibe's workspace (members = [".",
# "service"]) and does not bust the Docker build cache.
[workspace]

[package]
name = "gcs-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
object_store = { version = "0.14", features = ["gcp"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
futures = "0.3"
