[package]
name = "vibe-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vibe-service"
path = "src/main.rs"

[dependencies]
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hound = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
forced-alignment = { git = "https://github.com/ultrasaurus/forced-alignment-rs.git", tag = "v0.2.1", features = ["cuda"] }